# TopTaggerTools

./: .gitignore  HistoContainer.cc  HistoContainer.h  README.md
ResolvedTaggerValidation/: DataMC.cc  DataMC.h  DataMCsys.cc  DataMCsys.h  Eff.cc  Eff.h  ResTagger.h  TagVar.cc  TagVar.h  Weight.h
ResolvedTaggerValidation/condorDataMC/: condorDataMC_submit.txt  condorSubmit.py  goMakePlots.sh
Tools/: CSVv2_Moriond17_B_H.csv  ISRWeights.root  Makefile  PileupHistograms_0121_69p2mb_pm4p6.root  TopTagger.cfg  WPs.py  allINone_ISRJets.root  derivedTupleVariables.h  example.root  sampleCollections.txt  sampleSets.txt  simpleAnalyzer.C  tfModel_frozen.pb
Tools/condor/: condorSubmit.py
Tools/condor/plotsrc/plotsDiMuon/src/: plot.C.old
Tools/condor/plotsrc/plotsQCD/: plot
Tools/condor/plotsrc/plotsSinglePhoton/src/: plot.C.old
Tools/condor/plotsrc/plotsTTbar/src/: plot.C.old
Tools/condor/plotsrc/plotsTTbarLep/src/: plot.C
Tools/include/: Eff_FakeRatePlots.h  HistoContainer.h  derivedTupleVariables.h
Tools/src/: HistoContainer.cc  fakeRatePlots.C  simpleAnalyzer.C
Tools/test/: AN_fakeRateEfficiencyPlots.sh  Eff_FakeRatePlots.h  Makefile  Makefile.in  configure.ac  fakeRatePlots.C
Tools/test/1_Make_ALL_plots/all_codes/: histosEffPlots_WPs.py  histosRocPlots_WPs.py
Tools/test/condor/: condorSubmit.py  goTTplots.sh  hadder.py
